# thejudgeapp

./: .gitignore  0.1.2releasenotes.txt  Cargo.toml  README.md  data-manifest.json  feature_graphic.html  index.html  ipg_extracted.txt  package-lock.json  package.json  release.ps1  release.sh  tsconfig.json  vite.config.js  vitest.config.ts
crates/judge-api/: Cargo.toml  README.md
crates/judge-api/src/: main.rs
crates/roundtimer/: Cargo.toml
crates/roundtimer/src/: main.rs
crates/scryfall/: Cargo.toml
data/: riftbound_cr.json  riftbound_ep.json  riftbound_tr.json
resources/: 0.1.10releasenotes.txt  0.1.11releasenotes.txt  0.1.12releasenotes.txt  0.1.13releasenotes.txt  0.1.14releasenotes.txt  0.1.15releasenotes.txt  0.1.16releasenotes.txt  0.1.17releasenotes.txt  0.1.18releasenotes.txt  0.1.19releasenotes.txt  0.1.20releasenotes.txt  0.1.21releasenotes.txt  0.1.22releasenotes.txt  0.1.23releasenotes.txt  0.1.24releasenotes.txt  0.1.25releasenotes.txt  0.1.26releasenotes.txt  0.1.27releasenotes.txt  0.1.28releasenotes.txt  0.1.29releasenotes.txt  0.1.2releasenotes.txt  0.1.3releasenotes.txt  0.1.4releasenotes.txt  0.1.5releasenotes.txt  0.1.6releasenotes.txt  0.1.7releasenotes.txt  0.1.8releasenotes.txt  0.1.9releasenotes.txt  0.2.0releasenotes.txt  Latest_release.txt  copyable_characteristics.txt  draftscript.txt  feature_graphic.html  layers.txt  mtr_extracted.txt  screenshot_cr.html
scripts/: deploy-judge-api.ps1  update-cards.ps1  update-cards.sh  update-riftbound-cards.ps1  update-riftbound-cards.sh
src/: main.js  main.ts  rb-icons.ts  rules-routing.ts  theme.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: custom_tabs.rs  lib.rs  main.rs  save_to_gallery.rs
src-tauri/src/commands/: cards.rs  custom_tabs.rs  gallery.rs  mod.rs  riftbound_cards.rs  rules.rs  updates.rs
src-tauri/src/db/: cards_repo.rs  migrations.rs  mod.rs  riftbound_cards_repo.rs  rules_repo.rs  schema.rs
src-tauri/src/db/migrations/: 0001_init.sql  0002_cards_additions.sql  0003_cmc.sql  0004_printings.sql  0005_riftbound_cards.sql  0006_dedupe_cards.sql  0007_rebuild_fts.sql  0008_back_image_url.sql  0009_riftbound_tags.sql
src-tauri/src/models/: card.rs  document.rs  mod.rs  riftbound_card.rs  rule.rs
src-tauri/src/parser/: cr_parser.rs  ipg_parser.rs  jar_parser.rs  mod.rs  mtr_parser.rs
src-tauri/src/riftbound_data/cr/: 000.json  100.json  300.json  400.json  649.json  650.json  651.json  652.json  700.json  800.json  metadata.json
src-tauri/src/riftbound_data/tr/: 000.json  100.json  200.json  300.json  400.json  500.json  600.json  700.json  metadata.json
src-tauri/src/search/: fts.rs
src-tauri/src/sync/: cards_updater.rs  mod.rs  riftbound_cards_updater.rs  riftbound_importer.rs  rules_updater.rs
src/__mocks__/: tauri-core.ts  tauri-event.ts  tauri-os.ts  tauri-shell.ts
src/__tests__/: cards.test.ts  draft-guide.test.ts  quick-reference.test.ts  rb-icons.test.ts  rules-routing.test.ts  rules-viewer.test.ts  theme.test.ts  updates.test.ts
src/pages/: cards.ts  (+11 more)
(+11 files in other folders)
