[package]
name = "thejudgeapp"
version = "0.1.0"
edition = "2021"
default-run = "thejudgeapp"

[lib]
name = "thejudgeapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "bundled-full"] }
regex = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
pdf-extract = "0.7"
zstd = "0.13"

[[bin]]
name = "update_cr"
path = "src/bin/update_cr.rs"

[[bin]]
name = "update_mtr"
path = "src/bin/update_mtr.rs"

[[bin]]
name = "update_ipg"
path = "src/bin/update_ipg.rs"

[[bin]]
name = "update_cards"
path = "src/bin/update_cards.rs"

[[bin]]
name = "compress_seed_db"
path = "src/bin/compress_seed_db.rs"

[[bin]]
name = "record_version"
path = "src/bin/record_version.rs"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
