[package]
name = "judge-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "judge-api"
path = "src/main.rs"

[[bin]]
name = "compile-cards"
path = "src/bin/compile_cards.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
